--- a/Algoritmos-pruebas/index.css
+++ b/Algoritmos-pruebas/index.css
@@ -1,6 +1,11 @@
-#fizz-buzz{
-    display: flex;
-    flex-direction: row;
-    background-color: grey;
-    margin: 1rem;
+
+
+.upper-case{
+    text-transform: uppercase;
+}
+.first-upper-case{
+    text-transform: capitalize;
+}
+li {
+    text-transform: capitalize;
 }
